fix z-index for events in safari

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -442,6 +442,7 @@
         margin-right: 10px;
         position: relative;
         display: flex;
+        z-index: 1000;
 
         .text {
             margin: 8px 12px;
